Prevent scrollbar jump

--- a/message_app/static/css/main.scss
+++ b/message_app/static/css/main.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll
+}
+
 .intro {
     margin-bottom: 50px;
 }
